# HiGHS-cpp

./: .gitignore  CMakeLists.txt  Comparison.md  LICENSE  LP.md  ObjectiveFunction.md  Simultaneity.md  graph-generalised.cpp  graph.cpp  main.cpp  readme.MD  readme.md
log/: e-1  e-2  e-3  e6
